--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,7 +109,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/searchCard"
-            android:layout_width="348dp"
+            android:layout_width="330dp"
             android:layout_height="52dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
@@ -122,14 +122,12 @@
 
             <EditText
                 android:id="@+id/searchBox"
-                android:layout_width="348dp"
+                android:layout_width="300dp"
                 android:layout_height="52dp"
                 android:layout_marginEnd="0dp"
                 android:layout_marginRight="0dp"
                 android:layout_marginBottom="0dp"
                 android:background="@drawable/ic_search_box"
-                android:drawableLeft="@drawable/ic_searchsymbol"
-                android:drawablePadding="10dp"
                 android:ems="10"
                 android:hint="Search our answer forums"
                 android:inputType="textPersonName"
@@ -138,6 +136,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/searchBoxButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_searchsymbol"
+                android:layout_marginLeft="300dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/ic_search_box"/>
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
