--- a/app/src/main/res/layout/question_search_result_card_view.xml
+++ b/app/src/main/res/layout/question_search_result_card_view.xml
@@ -1,33 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:orientation="vertical"
+android:layout_width="match_parent"
+android:layout_margin="5dp"
+app:cardElevation="5dp"
+android:layout_height="wrap_content">
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_margin="5dp"
-    app:cardElevation="5dp"
-    android:layout_height="wrap_content">
-    <LinearLayout
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/cardview_subject"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/cardview_subject1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Subject"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:padding="10dp"/>
-        <TextView
-            android:id="@+id/cardview_question1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="question"/>
-    </LinearLayout>
-    <View
+        android:text="Subject"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:padding="10dp"/>
+    <TextView
+        android:id="@+id/cardview_question"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000"/>
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="question"/>
+    <TextView
+        android:id="@+id/cardview_answer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="question"/>
+
+</LinearLayout>
+<View
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:background="#000"/>
 </androidx.cardview.widget.CardView>
