--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -151,19 +151,12 @@
             android:id="@+id/buttonLogIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="152dp"
+            android:layout_marginTop="4dp"
             android:onClick="onLoginClick"
             android:text="Log In"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/searchCard" />
-
-        <Button
-            android:id="@+id/buttonExpert"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onAnswerClick"
-            android:text="Answer a Question"
-            app:layout_constraintTop_toBottomOf="@+id/searchCard"
-            card_view:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
