--- a/app/src/main/res/layout/activity_register_expert.xml
+++ b/app/src/main/res/layout/activity_register_expert.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PostQuestionActivity">
+    tools:context=".RegisterExpertActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -67,7 +67,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/splashTitle2" />
-
 
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
@@ -167,9 +166,6 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
-
-
-
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
