--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/splashLightbulb" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf = "@+id/splashTitle"
+            android:text="Log In"
+
+            />
 
         <TextView
             android:id="@+id/splashInfo"
@@ -153,8 +162,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="152dp"
             android:layout_marginTop="4dp"
-            android:onClick="onLoginClick"
-            android:text="Log In"
+            android:onClick="onLogInSignUpClick"
+            android:text="Log In/Sign Up"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/searchCard" />
 
