--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,15 +22,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/splashLightbulb" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf = "@+id/splashTitle"
-            android:text="Log In"
-
-            />
 
         <TextView
             android:id="@+id/splashInfo"
@@ -43,25 +34,64 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+
+
+<!--        <Button-->
+<!--            android:id="@+id/chatButton"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginEnd="48dp"-->
+<!--            android:background="@drawable/ic_chatbutton"-->
+<!--            android:gravity="center_vertical|center_horizontal"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/textView6"-->
+<!--            app:layout_constraintEnd_toEndOf="parent" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/postButton"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="48dp"-->
+<!--            android:background="@drawable/ic_postquestion"-->
+<!--            android:onClick="onPostClick"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/textView3"-->
+<!--            app:layout_constraintStart_toStartOf="parent" />-->
+
+
+<!--        -->
+
         <Button
             android:id="@+id/chatButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="48dp"
+            android:layout_marginEnd="24dp"
             android:background="@drawable/ic_chatbutton"
             android:gravity="center_vertical|center_horizontal"
             app:layout_constraintBottom_toTopOf="@+id/textView6"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
+            android:id="@+id/loginButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:background="@drawable/ic_postquestion"
+
+            android:onClick="onLogInSignUpClick"
+            app:layout_constraintBottom_toTopOf="@+id/textView7"
+            app:layout_constraintStart_toEndOf="@+id/postButton" />
+
+        <Button
             android:id="@+id/postButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
+            android:layout_marginStart="24dp"
             android:background="@drawable/ic_postquestion"
             android:onClick="onPostClick"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="parent" />
+
+
+
 
         <ImageView
             android:id="@+id/splashAccent"
@@ -93,6 +123,30 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+<!--        <TextView-->
+<!--            android:id="@+id/textView3"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginBottom="32dp"-->
+<!--            android:fontFamily="@font/montserrat"-->
+<!--            android:text="Post a Question"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/postButton"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/postButton" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textView6"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:fontFamily="@font/montserrat"-->
+<!--            android:text="Ask an Online Expert"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/textView3"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/chatButton"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/chatButton" />-->
+
+
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
@@ -105,6 +159,7 @@
             app:layout_constraintEnd_toEndOf="@+id/postButton"
             app:layout_constraintStart_toStartOf="@+id/postButton" />
 
+
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
@@ -115,6 +170,19 @@
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="@+id/chatButton"
             app:layout_constraintStart_toStartOf="@+id/chatButton" />
+
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="44dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Log in"
+            android:textColor="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="@+id/textView3"
+
+            app:layout_constraintStart_toEndOf="@id/textView3" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/searchCard"
@@ -156,16 +224,16 @@
                 android:background="@drawable/ic_search_box"/>
         </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/buttonLogIn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="152dp"
-            android:layout_marginTop="4dp"
-            android:onClick="onLogInSignUpClick"
-            android:text="Log In/Sign Up"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchCard" />
+<!--        <Button-->
+<!--            android:id="@+id/buttonLogIn"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="152dp"-->
+<!--            android:layout_marginTop="4dp"-->
+<!--            android:onClick="onLogInSignUpClick"-->
+<!--            android:text="Log In/Sign Up"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/searchCard" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
