Register Expert, Student.

--- a/app/src/main/res/layout/activity_question_search_result.xml
+++ b/app/src/main/res/layout/activity_question_search_result.xml
@@ -2,9 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".QuestionSearchResultActivity">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="25sp"
+        android:text="Click on a question to post an answer."/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView"
