--- a/app/src/main/res/layout/activity_log_in_sign_up.xml
+++ b/app/src/main/res/layout/activity_log_in_sign_up.xml
@@ -82,18 +82,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <Button
-            android:id="@+id/ButtonSignUpStudent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/montserrat"
-            android:text="Sign Up As a Student"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ButtonLogIn"/>
-
-        <Button
             android:id="@+id/ButtonSignUpExpert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -101,140 +89,24 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/montserrat"
             android:text="Sign Up As an Expert"
+            android:onClick="onExpertSignUpClick"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ButtonSignUpStudent"/>
+            app:layout_constraintTop_toBottomOf="@+id/ButtonLogIn"/>
 
+        <Button
+            android:id="@+id/ButtonSignUpStudent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Sign Up As a Student"
+            android:onClick="onStudentSignUpClick"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ButtonSignUpExpert"/>
 
-
-<!--        <androidx.cardview.widget.CardView-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="0dp"-->
-<!--            android:layout_marginStart="24dp"-->
-<!--            android:layout_marginTop="24dp"-->
-<!--            android:layout_marginEnd="24dp"-->
-<!--            android:layout_marginBottom="24dp"-->
-<!--            app:cardCornerRadius="5dp"-->
-<!--            app:cardElevation="5dp"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/cardView2"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/textView" >-->
-
-<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent">-->
-
-<!--                <View-->
-<!--                    android:id="@+id/divider2"-->
-<!--                    android:layout_width="384dp"-->
-<!--                    android:layout_height="1dp"-->
-<!--                    android:layout_marginTop="50dp"-->
-<!--                    android:background="?android:attr/listDivider"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--                <View-->
-<!--                    android:id="@+id/divider4"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="1dp"-->
-<!--                    android:layout_marginBottom="130dp"-->
-<!--                    android:background="?android:attr/listDivider"-->
-<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toStartOf="parent" />-->
-
-
-
-<!--                <EditText-->
-<!--                    android:id="@+id/editText"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="0dp"-->
-<!--                    android:layout_marginStart="8dp"-->
-<!--                    android:layout_marginEnd="16dp"-->
-<!--                    android:layout_marginBottom="2dp"-->
-<!--                    android:cursorVisible="true"-->
-<!--                    android:ems="10"-->
-<!--                    android:fontFamily="@font/montserrat"-->
-<!--                    android:hint="e.g. How to do matrix multiplication"-->
-<!--                    android:inputType="textPersonName"-->
-<!--                    android:textSize="14sp"-->
-<!--                    app:layout_constraintBottom_toTopOf="@+id/divider2"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toEndOf="@+id/textView4"-->
-<!--                    app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--                <EditText-->
-<!--                    android:id="@+id/editText2"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="0dp"-->
-<!--                    android:background="#00FFFFFF"-->
-<!--                    android:ems="10"-->
-<!--                    android:fontFamily="@font/montserrat"-->
-<!--                    android:gravity="start|top"-->
-<!--                    android:hint="Explain your question in more detail here"-->
-<!--                    android:inputType="textMultiLine"-->
-<!--                    android:paddingStart="16dp"-->
-<!--                    android:paddingTop="16dp"-->
-<!--                    android:paddingEnd="16dp"-->
-<!--                    android:paddingBottom="16dp"-->
-<!--                    android:textSize="14sp"-->
-<!--                    app:boxBackgroundMode="none"-->
-<!--                    app:layout_constraintBottom_toTopOf="@+id/divider4"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:layout_constraintTop_toBottomOf="@+id/divider2" />-->
-
-<!--                <com.google.android.material.chip.ChipGroup-->
-<!--                    android:layout_width="384dp"-->
-<!--                    android:layout_height="128dp"-->
-<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:layout_constraintTop_toBottomOf="@+id/divider4" />-->
-
-<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
-<!--        </androidx.cardview.widget.CardView>-->
-<!--        -->
-<!--        -->
-
-
-
-<!--        <androidx.cardview.widget.CardView-->
-<!--            android:id="@+id/cardView2"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="60dp"-->
-<!--            android:layout_marginStart="24dp"-->
-<!--            android:layout_marginEnd="24dp"-->
-<!--            android:layout_marginBottom="24dp"-->
-<!--            android:backgroundTint="@color/colorPrimary"-->
-<!--            app:cardCornerRadius="10dp"-->
-<!--            app:cardElevation="5dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent">-->
-
-<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent">-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/textView2"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="@font/montserrat"-->
-<!--                    android:text="Post Question"-->
-<!--                    android:textColor="@color/colorAccent"-->
-<!--                    android:textSize="21sp"-->
-<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:layout_constraintTop_toTopOf="parent" />-->
-<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-<!--        </androidx.cardview.widget.CardView>-->
-<!--        -->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
