--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RegisterExpertActivity">
+    tools:context=".RegisterStudentActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,11 +17,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat"
-            android:text="Sign Up As An Expert"
+            android:text="Sign Up As An Student"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/splashTitle2" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editTextName"
@@ -51,45 +51,37 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextName" />
 
 
-        <EditText
-            android:id="@+id/editTextPhone"
-            android:layout_width="wrap_content"
+
+
+        <RadioGroup
+            android:id="@+id/radioGroupMembership"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:fontFamily="@font/montserrat"
-            android:hint="Phone"
-            android:text=""
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical"
+            android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextGoogleAcc" />
-        <EditText
-            android:id="@+id/editTextSubjects"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:fontFamily="@font/montserrat"
-            android:hint="Subjects, e.g. Math, Biology"
-            android:text=""
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
-        <EditText
-            android:id="@+id/editTextRatePerQuestion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:fontFamily="@font/montserrat"
-            android:hint="Rate Per Question"
-            android:text=""
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextSubjects" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextGoogleAcc">
+
+            <RadioButton
+
+                android:id="@+id/radio_free"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:onClick="onRadioButtonMembership"
+                android:text="Free Membership" />
+
+            <RadioButton
+
+                android:id="@+id/radio_premium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:onClick="onRadioButtonMembership"
+                android:text="Premium Membership" />
+        </RadioGroup>
 
 
         <androidx.cardview.widget.CardView
@@ -103,7 +95,7 @@
             android:backgroundTint="@color/colorPrimary"
             app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextRatePerQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroupMembership"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
