--- a/app/src/main/res/layout/activity_question_search_result.xml
+++ b/app/src/main/res/layout/activity_question_search_result.xml
@@ -9,8 +9,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         android:textSize="25sp"
+        android:textStyle="italic"
         android:text="Click on a question to post an answer."/>
 
     <androidx.recyclerview.widget.RecyclerView
