--- a/app/src/main/res/layout/activity_register_expert.xml
+++ b/app/src/main/res/layout/activity_register_expert.xml
@@ -11,6 +11,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:onClick="onBackClick"
+            app:cardCornerRadius="25dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_backarrow" />
+        </androidx.cardview.widget.CardView>
+
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -21,14 +45,14 @@
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/splashTitle2" />
+            app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
         <EditText
             android:id="@+id/editTextName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat"
             android:hint="Name"
@@ -39,12 +63,12 @@
 
         <EditText
             android:id="@+id/editTextGoogleAcc"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:fontFamily="@font/montserrat"
-            android:hint="Google Account"
+            android:hint="Google account, for example, sjones123"
             android:text=""
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,10 +77,10 @@
 
         <EditText
             android:id="@+id/editTextPhone"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat"
             android:hint="Phone"
@@ -66,26 +90,26 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextGoogleAcc" />
         <EditText
             android:id="@+id/editTextSubjects"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat"
-            android:hint="Subjects, e.g. Math, Biology"
+            android:hint="Subjects, for example, Math, Biology"
             android:text=""
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
         <EditText
             android:id="@+id/editTextRatePerQuestion"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat"
-            android:hint="Rate Per Question"
+            android:hint="Rate per question, for example, 4.50"
             android:text=""
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
