Main screen ui changes

--- a/app/src/main/res/layout/activity_post_question.xml
+++ b/app/src/main/res/layout/activity_post_question.xml
@@ -124,9 +124,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="0dp"
                     android:fontFamily="@font/montserrat"
                     android:text="Subject"
+                    app:layout_constraintBottom_toTopOf="@+id/divider2"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
